--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <button class="btn" type="button" data-modal-open>Заказать услугу</button>
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
-                        <button class="btn-modal" data-modal-close>x</button>
+                        <button class="btn-modal" data-modal-close>
+                            <embed src="./images/Vector (1).svg" type="">
+                        </button>
                     </div>
                 </div>
             </section>
