--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                 <div class="container">
                     <h2 class="work">Чем мы занимаемся</h2>
                     <ul class="work-ul">
-                        <li>
-                            <img src="./images/img.jpg" width="370" alt="программист работает в своем рабочем офисе">
+                        <li class="work-li">
+                                <img src="./images/img.jpg" width="370" alt="программист работает в своем рабочем офисе">
+                                    <h3 class="work-h">Десктопные приложения</h3>
                         </li>
                         <li>
                             <img src="./images/img2.jpg" width="370" alt="вебдизайнеры разрабатывают приложение на смартфоны">
