--- a/index.html
+++ b/index.html
@@ -44,13 +44,7 @@
             <section class="hero section">
                 <h1 class="decision">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="btn" type="button" data-modal-open>Заказать услугу</button>
-                <div class="backdrop is-hidden" data-modal>
-                    <div class="modal">
-                        <button class="btn-modal" data-modal-close>
-                            <embed src="./images/Vector (1).svg" type="">
-                        </button>
-                    </div>
-                </div>
+                
             </section>
             <!-- Увага, пунктуальність, планування та сучасні технології -->
             <section class="section section-tehnologi">
@@ -104,12 +98,14 @@
                                 <img src="./images/img.jpg" width="370" alt="программист работает в своем рабочем офисе">
                                     <h3 class="work-h">Десктопные приложения</h3>
                         </li>
-                        <li>
+                        <li class="work-li">
                             <img src="./images/img2.jpg" width="370" alt="вебдизайнеры разрабатывают приложение на смартфоны">
+                            <h3 class="work-h">Мобильные приложения</h3>
                         </li>
-                        <li>
+                        <li class="work-li">
                             <img src="./images/img3.jpg" width="370"
                                 alt="креативный художник веб дизайнер с рабочим выбором цвета графическим планшетом">
+                                <h3 class="work-h">Дизайнерские решения</h3>
                         </li>
                     </ul>
                 </div>
@@ -327,6 +323,15 @@
         </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="btn-modal" data-modal-close>
+                <svg class="vector" width="11" height="11">
+                    <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
     <!-- Модальне вікно -->
     <script src="./js/modal.js"></script>
 </body>
