--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="auth-nav">
             <a class="webstudio text-decor" href=""><span class="web">Web</span>Studio</a>
             <ul class="site-ul">
-                <li><a class="link-li text-decor" href="./index.html">Студия</a></li>
+                <li><a class="link-li text-decor current" href="./index.html">Студия</a></li>
                 <li><a class="link-li text-decor" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link-li text-decor" href="">Контакты</a></li>
             </ul>
