--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <a class="webstudio text-decor" href=""><span class="web">Web</span>Studio</a>
             <ul class="site-ul">
                 <li><a class="link-li text-decor" href="./index.html">Студия</a></li>
-                <li><a class="link-li text-decor" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link-li text-decor current" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link-li text-decor" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -71,11 +71,14 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
-                                                    <img class="img-item" src="./images/img9.jpg" width="370" alt="Постер New Orlean vs Golden Star">
-                                                    <div class="div-title">
-                                                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                                                        <p class="title-p">Дизайн</p>
-                                                    </div>
+                            <div class="cards-div">
+                                <img class="img-item" src="./images/img9.jpg" width="370" alt="Постер New Orlean vs Golden Star">
+                                <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                <div class="div-title">
+                                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                                    <p class="title-p">Дизайн</p>
+                                </div>
+                            </div>
                         </a>
                     </li>
                     <li class="images-link">
