--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,11 @@
                 <ul class="images">
                     <li class="images-link">
                         <a class="cards" href="">
-                            <img class="img-item" src="./images/img8.jpg" width="370" alt="Веб-сайт">
+                            <div class="div-overlay">
+                                <img class="img-item" src="./images/img8.jpg" width="370" alt="Веб-сайт">
+                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="div-title">
                                 <h2 class="title">Технокряк</h2>
                                 <p class="title-p">Веб-сайт</p>
@@ -71,19 +75,24 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
-                            <div class="cards-div">
+                            <div class="div-overlay">
                                 <img class="img-item" src="./images/img9.jpg" width="370" alt="Постер New Orlean vs Golden Star">
-                                <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
-                                <div class="div-title">
+                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
+                                  <div class="div-title">
                                     <h2 class="title">Постер New Orlean vs Golden Star</h2>
                                     <p class="title-p">Дизайн</p>
                                 </div>
-                            </div>
                         </a>
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
-                                                    <img class="img-item" src="./images/img10.jpg" width="370" alt="Ресторан Seafood">
+                            <div class="div-overlay">
+                                                    <img src="./images/img10.jpg" width="370" alt="Ресторан Seafood">
+                                        <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                         позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                         </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Ресторан Seafood</h2>
                                                         <p class="title-p">Приложение</p>
@@ -92,7 +101,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
-                                                    <img class="img-item" src="./images/img11.jpg" width="370" alt="наушники">
+                            <div class="div-overlay">
+                                                    <img src="./images/img11.jpg" width="370" alt="наушники">
+                                                        <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                            позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                                </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Проект Prime</h2>
                                                         <p class="title-p">Маркетинг</p>
@@ -101,7 +114,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
-                                                    <img class="img-item" src="./images/img12.jpg" width="370" alt="две коробки">
+                            <div class="div-overlay">
+                                                    <img src="./images/img12.jpg" width="370" alt="две коробки">
+                                                        <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                            позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                                </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Проект Boxes</h2>
                                                         <p class="title-p">Приложение</p>
@@ -110,7 +127,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
+                            <div class="div-overlay">
                                                     <img class="img-item" src="./images/img13.jpg" width="370" alt="монитор">
+                                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                    </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Inspiration has no Borders</h2>
                                                         <p class="title-p">Веб-сайт</p>
@@ -119,7 +140,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
+                            <div class="div-overlay">
                                                     <img class="img-item" src="./images/img14.jpg" width="370" alt="журнал">
+                                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                     </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Издание Limited Edition</h2>
                                                         <p class="title-p">Дизайн</p>
@@ -128,7 +153,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
+                            <div class="div-overlay">
                                                     <img class="img-item" src="./images/img15.jpg" width="370" alt="єтикетка">
+                                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                     </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Проект LAB</h2>
                                                         <p class="title-p">Маркетинг</p>
@@ -137,7 +166,11 @@
                     </li>
                     <li class="images-link">
                         <a class="cards" href="">
+                            <div class="div-overlay">
                                                     <img class="img-item" src="./images/img16.jpg" width="370" alt="Приложение Growing Business">
+                                                    <p class="cards-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                                        позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                                                     <div class="div-title">
                                                         <h2 class="title">Growing Business</h2>
                                                         <p class="title-p">Приложение</p>
