--- a/portfolio.html
+++ b/portfolio.html
@@ -186,11 +186,13 @@
         <div class="container footers">
             <div class="footer-addres">
                 <a class="webstudio-footer text-decor" href=""><span class="web">Web</span>Studio</a>
-                <address class="address text-decor">г. Киев, пр-т Леси Украинки, 26</address>
-                <ul class="email-link">
-                    <li><a class="email text-decor" href="">info@example.com</a></li>
-                    <li><a class="email text-decor" href="">+38 099 111 11 11</a></li>
-                </ul>
+                <address>
+                    <ul class="email-link">
+                        <li><a class="address text-decor" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li><a class="email text-decor" href="">info@example.com</a></li>
+                        <li><a class="email text-decor" href="">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
             </div>
             <div class="footer-icons">
                 <p class="footer-p">присоединяйтесь</p>
